fix: align icons properly in TxnPreview

--- a/src/components/common/TxnPreview/ExtendedSummaryItem/ExtendedSummaryItem.module.scss
+++ b/src/components/common/TxnPreview/ExtendedSummaryItem/ExtendedSummaryItem.module.scss
@@ -1,7 +1,7 @@
 @import "variables";
 
 $txn-height: 65px;
-$extended-summary-height: 40px;
+$extended-summary-height: 36px;
 
 .action {
   display: flex;
